# University

./: README.md
AA/Practicas/: P0.py
AC/: comandos.txt
AC/bp0/: BP0_GangosoKlockJorge.odt
AC/bp1/: BP1_GangosoKlockJorge_1.odt
AC/bp2/: BP2_GangosoKlockJorge_1.odt
AC/bp3/: BP3_GangosoKlockJorge.odt  script_schedule.sh
ALG/2020_Practica 0/: Memoria_practica1_Algoritmica.odt  Presentacion_P1_ALG2020.odp
ALG/2020_Practica 1/: Practica1_UGR.sln
ALG/2020_Practica 4/: PDTSP.cpp  PDTSP_old.cpp  TSP  TSP_PD.cpp  ulysses1.tsp  ulysses2.tsp
ALG/2020_Practica 5/: 11.tsp  13.tsp  14.tsp  15.tsp  5.tsp  6.tsp  7.tsp  9.tsp  tspback  tspbb
CRIM/P1,P2/: LZWGangosoJorge.odt  Practica01GangosoJorge.m  Practica01MolinaRafael.docx  Practica01MolinaRafael.m  Waiting to be imported.txt  eleva_a_potencia.m
CRIP/: P1.py  RSA.py  potenciamodular.py  prueba.py
EC/: Bomba_Resuelta[Alberto_Plaza].odt  Bomba_Resuelta[Diego_De_Luis].odt  Explicacion_Bomba[Jorge_Gangoso_Klock].odt
IA/: RelacionProblemasEntregable2020.docx
MC/: P1_MC.odt  gramatica1.jff  gramatica2.jff
MH/P2_2023/QAP2_CPP/QAP2/: CMakeLists.txt  QAP2.cpp  QAP2.h
MH/P3_2023/QAP3_CPP/QAP3/QAP3/: CMakeLists.txt  QAP3.cpp  QAP3.h
MH/PAlternativa/CSA/: CMakeLists.txt  CSA.cpp  CSA.h
PL/: Makefile  README.txt  analizador  error.y  lex.yy.c  lexico.l  programaCompleto  programaFallos  sintactico.y  y.output  y.tab.c
PLD/: PLD_Propuesta_rise.odt
TFG/: TFG_Quantum_Gates.ipynb  TFG_Quantum_Gates.py  TFG_code.ipynb  TFG_code.py
TIC/: EAN-13_esqueleto.ipynb
VC/: P1_Gangoso_Klock_Jorge.rar  P2.ipynb
(+964 files in other folders)
