# CMakeList.txt: proyecto de CMake para QAP2, incluya el origen y defina
# la lógica específica del proyecto aquí.
#
cmake_minimum_required (VERSION 3.8)

project ("QAP2")

# Agregue un origen al ejecutable de este proyecto.
add_executable (QAP2 "QAP2.cpp" "QAP2.h")

# TODO: Agregue pruebas y destinos de instalación si es necesario.
