# CMakeList.txt: proyecto de CMake para QAP3, incluya el origen y defina
# la lógica específica del proyecto aquí.
#
cmake_minimum_required (VERSION 3.8)

project ("QAP3")

# Agregue un origen al ejecutable de este proyecto.
add_executable (QAP3 "QAP3.cpp" "QAP3.h")

# TODO: Agregue pruebas y destinos de instalación si es necesario.
